# exchange-rate-converter

./: .env_sample  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml
src/app/: __main__.py  app.py  currency_converter.py
src/external_server_mock/: server.py
tests/: conftest.py  test_basics.py
