[tool.poetry]
name = "exchange-rate-converter"
version = "0.1.0"
description = "Service providing real time exchange rate conversion."
authors = ["Mark Seliverstov <seliverstovmd@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
]
include = ["*.conf", "py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
asyncio = "^3.4.3"
cachetools = "^5.5.0"
structlog = "^24.4.0"
websockets = "^13.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
poethepoet = "^0.26.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.4.1"
types-cachetools = "^5.5.0.20240820"

[tool.poetry.scripts]
rate_converter = "app.__main__:main"

[tool.pytest.ini_options]
addopts = """
    --verbose
    --ruff
    --mypy
    """
asyncio_mode = "auto"

[tool.poe.tasks]
_ruff_sort_imports = "ruff check --select I --fix ."
_ruff_format = "ruff format ."
format-code = ["_ruff_sort_imports", "_ruff_format"]

[tool.ruff]
line-length = 99
output-format = "full"
force-exclude = true
extend-exclude = ["**pb2.py", "**pb2.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "PERF", "ARG"]
ignore = [
    "E1", # handled by formatter
    "E4", # handled by formatter
    "E5", # handled by formatter
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 99

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
